requestreplymq/proyecto_rabbit/ms_alfanumeric_desencolar/deployment/k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: #{service}#
  namespace: #{namespace}#
  labels:
    app.bancolombia.com.co/env: #{env}#
    app.bancolombia.com.co/cost-center: #{cost-center}#
    app.bancolombia.com.co/application-code: #{application-code}#
    app.bancolombia.com.co/project: #{project-name}#
    app.bancolombia.com.co/pmo: #{pmo}#
spec:
  selector:
    app: #{project-name}#
    pod: #{service}#-pod
  ports:
    - name: http
      targetPort: #{container-port}#
      port: #{service-port}#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #{service}#-deployment
  namespace: #{namespace}#
  labels:
    app.bancolombia.com.co/env: #{env}#
    app.bancolombia.com.co/cost-center: #{cost-center}#
    app.bancolombia.com.co/application-code: #{application-code}#
    app.bancolombia.com.co/project: #{project-name}#
    app.bancolombia.com.co/pmo: #{pmo}#
spec:
  replicas: #{replicas}#
  selector:
    matchLabels:
      pod: #{service}#-pod
  template:
    metadata:
      labels:
        app: #{project-name}#
        pod: #{service}#-pod
        app.bancolombia.com.co/project: #{project-name}#
        version: #{version}#
    #        oneagent.dynatrace.com/instance: oneagentapm
    #      annotations:
    #        oneagent.dynatrace.com/inject: "true"
    spec:
      securityContext:
        fsGroup: #{java_gid}#
      serviceAccountName: #{project-name}#-iam-sa
      containers:
        - name: #{service}#-container
          image: #{image}#
          resources:
            requests:
              cpu: "#{requests-cpu}#"
              memory: "#{requests-memory}#"
            limits:
              cpu: "#{requests-cpu-limit}#"
              memory: "#{requests-memory-limit}#"
          ports:
            - containerPort: #{container-port}#
          volumeMounts:
            - name: config
              mountPath: /home/appuser/config
              readOnly: true
          #            - name: keystores
          #              mountPath: /home/appuser/jks
          #              readOnly: true
          securityContext:
            allowPrivilegeEscalation: false
          startupProbe:
            httpGet:
              path: /api/create-alphanumeric-password/actuator/health
              port: #{container-port}#
            periodSeconds: #{probe-period-startup}#
            timeoutSeconds: #{probe-period-startup}#
            failureThreshold: #{probe-period-startup-failures}#
          readinessProbe:
            httpGet:
              path: /api/create-alphanumeric-password/actuator/health/readinessState
              port: #{container-port}#
            periodSeconds: #{probe-period-readiness}#
            timeoutSeconds: #{probe-period-readiness}#
          livenessProbe:
            httpGet:
              path: /api/create-alphanumeric-password/actuator/health/livenessState
              port: #{container-port}#
            periodSeconds: #{probe-period-liveness}#
            timeoutSeconds: #{probe-period-liveness}#
      volumes:
        - name: config
          configMap:
            name: #{service}#-configmap
#        - name: keystores
#          emptyDir: { }
