requestreplymq/proyecto_rabbit/ms_alfanumeric_desencolar/deployment/k8s/security.yaml
####################   Authorization Policy ###################################
### Habilita el control de acceso a los servicios que cumplen las condiciones sin validacion de JWT #
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: jwt-validator-policy-create-poc
  namespace: #{namespace}#
spec:
  selector:
    matchLabels:
      app: #{project-name}#
  action: ALLOW
  rules:
    - from:
        - source:
            requestPrincipals: [ "*" ]
      when:
        - key: request.auth.claims[scope]
          values: [ "#{service}#","#{service}#-pod" ]
    - to:
        - operation:
            paths: [ "/api/desencolar-alphanumeric-password/*", "/clave-alfanumerica/api/desencolar-alphanumeric-password/", "/clave-alfanumerica/api/desencolar-alphanumeric-password/*", "clave-alfanumerica/api/desencolar-alphanumeric-password/", "api/desencolar-alphanumeric-password/" ]
